--- a/env.example
+++ b/env.example
@@ -1,5 +1,10 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/mopay_db"
+# Neon Auth environment variables for Next.js
+NEXT_PUBLIC_STACK_PROJECT_ID='9ccb8291-1113-4ab2-ab08-9bd283666302'
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY='pck_bx3g04bfa5hqs3hc3jhdg41ftsxa97kgdhb2yp29jqzb0'
+STACK_SECRET_SERVER_KEY='ssk_gbb1cp3myp9rjejdyenwv87hhxasnev3bxh6qjy2dgzmg'
+
+# Database owner connection string
+DATABASE_URL='postgresql://neondb_owner:npg_c4G8VaKAzLqy@ep-sweet-smoke-ad7qfe91-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require'
 
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key"
